interpreter/_build/default/src/parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 129
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On toplevel shift to state 170
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetFunExpr shift to state 171
-- On LetExpr shift to state 159
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 173
-- On DecLetExpr shift to state 175
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 1:
AExpr -> TRUE . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production AExpr -> TRUE 
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On SEMI reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On OOR reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On MDLPAREN reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On LPAREN reduce production AExpr -> TRUE 
-- On LET reduce production AExpr -> TRUE 
-- On INTV reduce production AExpr -> TRUE 
-- On IN reduce production AExpr -> TRUE 
-- On ID reduce production AExpr -> TRUE 
-- On FPLUS reduce production AExpr -> TRUE 
-- On FALSE reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 
-- On COROCORO reduce production AExpr -> TRUE 
-- On AND reduce production AExpr -> TRUE 
-- On AAND reduce production AExpr -> TRUE 

State 2:
ListExpr -> MDRPAREN . Expr SEMI ListInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
ListExpr -> MDRPAREN . Expr MDLPAREN [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
ListExpr -> MDRPAREN . MDLPAREN [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On MDLPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 121
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 3:
ListExpr -> MDRPAREN MDLPAREN . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On THEN reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On SEMISEMI reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On SEMI reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On RPAREN reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On PLUS reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On OOR reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On MULT reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On MDLPAREN reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On LT reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On LPAREN reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On LET reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On INTV reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On IN reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On ID reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On FPLUS reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On FALSE reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On ELSE reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On COROCORO reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On AND reduce production ListExpr -> MDRPAREN MDLPAREN 
-- On AAND reduce production ListExpr -> MDRPAREN MDLPAREN 

State 4:
AExpr -> LPAREN . Expr RPAREN [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 119
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 5:
LetAndInExpr -> LET . ID EQ Expr AND LetAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
LetInExpr -> LET . ID EQ Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
LetRecExpr -> LET . REC ID EQ FUN ID RARROW Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET . REC ID EQ FUN ID RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On REC shift to state 6
-- On ID shift to state 114

State 6:
LetRecExpr -> LET REC . ID EQ FUN ID RARROW Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET REC . ID EQ FUN ID RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On ID shift to state 7

State 7:
LetRecExpr -> LET REC ID . EQ FUN ID RARROW Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET REC ID . EQ FUN ID RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On EQ shift to state 8

State 8:
LetRecExpr -> LET REC ID EQ . FUN ID RARROW Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET REC ID EQ . FUN ID RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On FUN shift to state 9

State 9:
LetRecExpr -> LET REC ID EQ FUN . ID RARROW Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET REC ID EQ FUN . ID RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On ID shift to state 10

State 10:
LetRecExpr -> LET REC ID EQ FUN ID . RARROW Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET REC ID EQ FUN ID . RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On RARROW shift to state 11

State 11:
LetRecExpr -> LET REC ID EQ FUN ID RARROW . Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> LET REC ID EQ FUN ID RARROW . Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 111
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 12:
AExpr -> INTV . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production AExpr -> INTV 
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On SEMI reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On OOR reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On MDLPAREN reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On LPAREN reduce production AExpr -> INTV 
-- On LET reduce production AExpr -> INTV 
-- On INTV reduce production AExpr -> INTV 
-- On IN reduce production AExpr -> INTV 
-- On ID reduce production AExpr -> INTV 
-- On FPLUS reduce production AExpr -> INTV 
-- On FALSE reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 
-- On COROCORO reduce production AExpr -> INTV 
-- On AND reduce production AExpr -> INTV 
-- On AAND reduce production AExpr -> INTV 

State 13:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 106
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 14:
AExpr -> ID . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
FunMExpr -> ID . RARROW Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
LetAndInExpr -> ID . EQ Expr AND LetAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
LetAndInExpr -> ID . EQ Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> ID . EQ FUN ID RARROW Expr AND RecAndInExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
RecAndInExpr -> ID . EQ Expr IN Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On RARROW shift to state 15
-- On EQ shift to state 68
-- On TRUE reduce production AExpr -> ID 
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On SEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On OOR reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On MDLPAREN reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On LPAREN reduce production AExpr -> ID 
-- On LET reduce production AExpr -> ID 
-- On INTV reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ID reduce production AExpr -> ID 
-- On FPLUS reduce production AExpr -> ID 
-- On FALSE reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On COROCORO reduce production AExpr -> ID 
-- On AND reduce production AExpr -> ID 
-- On AAND reduce production AExpr -> ID 

State 15:
FunMExpr -> ID RARROW . Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 67
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 16:
FunExpr -> FUN . ID RARROW Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
FunMExpr -> FUN . ID FunMExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On ID shift to state 17

State 17:
FunExpr -> FUN ID . RARROW Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
FunMExpr -> FUN ID . FunMExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On RARROW shift to state 18
-- On ID shift to state 63
-- On FUN shift to state 64
-- On FunMExpr shift to state 66

State 18:
FunExpr -> FUN ID RARROW . Expr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 29
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 62
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50

State 19:
FPlusFunExpr -> FPLUS . AExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
FPlusFunExpr -> FPLUS . AExpr AExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 4
-- On INTV shift to state 12
-- On ID shift to state 20
-- On FALSE shift to state 21
-- On AExpr shift to state 22

State 20:
AExpr -> ID . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production AExpr -> ID 
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On SEMI reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On OOR reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On MDLPAREN reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On LPAREN reduce production AExpr -> ID 
-- On LET reduce production AExpr -> ID 
-- On INTV reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ID reduce production AExpr -> ID 
-- On FPLUS reduce production AExpr -> ID 
-- On FALSE reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On COROCORO reduce production AExpr -> ID 
-- On AND reduce production AExpr -> ID 
-- On AAND reduce production AExpr -> ID 

State 21:
AExpr -> FALSE . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production AExpr -> FALSE 
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On SEMI reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On OOR reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On MDLPAREN reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On LPAREN reduce production AExpr -> FALSE 
-- On LET reduce production AExpr -> FALSE 
-- On INTV reduce production AExpr -> FALSE 
-- On IN reduce production AExpr -> FALSE 
-- On ID reduce production AExpr -> FALSE 
-- On FPLUS reduce production AExpr -> FALSE 
-- On FALSE reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 
-- On COROCORO reduce production AExpr -> FALSE 
-- On AND reduce production AExpr -> FALSE 
-- On AAND reduce production AExpr -> FALSE 

State 22:
FPlusFunExpr -> FPLUS AExpr . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
FPlusFunExpr -> FPLUS AExpr . AExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On LPAREN shift to state 4
-- On INTV shift to state 12
-- On ID shift to state 20
-- On FALSE shift to state 21
-- On AExpr shift to state 23
-- On TRUE reduce production FPlusFunExpr -> FPLUS AExpr 
-- On THEN reduce production FPlusFunExpr -> FPLUS AExpr 
-- On SEMISEMI reduce production FPlusFunExpr -> FPLUS AExpr 
-- On SEMI reduce production FPlusFunExpr -> FPLUS AExpr 
-- On RPAREN reduce production FPlusFunExpr -> FPLUS AExpr 
-- On PLUS reduce production FPlusFunExpr -> FPLUS AExpr 
-- On OOR reduce production FPlusFunExpr -> FPLUS AExpr 
-- On MULT reduce production FPlusFunExpr -> FPLUS AExpr 
-- On MDLPAREN reduce production FPlusFunExpr -> FPLUS AExpr 
-- On LT reduce production FPlusFunExpr -> FPLUS AExpr 
-- On LPAREN reduce production FPlusFunExpr -> FPLUS AExpr 
-- On LET reduce production FPlusFunExpr -> FPLUS AExpr 
-- On INTV reduce production FPlusFunExpr -> FPLUS AExpr 
-- On IN reduce production FPlusFunExpr -> FPLUS AExpr 
-- On ID reduce production FPlusFunExpr -> FPLUS AExpr 
-- On FPLUS reduce production FPlusFunExpr -> FPLUS AExpr 
-- On FALSE reduce production FPlusFunExpr -> FPLUS AExpr 
-- On ELSE reduce production FPlusFunExpr -> FPLUS AExpr 
-- On COROCORO reduce production FPlusFunExpr -> FPLUS AExpr 
-- On AND reduce production FPlusFunExpr -> FPLUS AExpr 
-- On AAND reduce production FPlusFunExpr -> FPLUS AExpr 
** Conflict on TRUE LPAREN INTV ID FALSE

State 23:
FPlusFunExpr -> FPLUS AExpr AExpr . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On THEN reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On SEMISEMI reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On SEMI reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On RPAREN reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On PLUS reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On OOR reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On MULT reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On MDLPAREN reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On LT reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On LPAREN reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On LET reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On INTV reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On IN reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On ID reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On FPLUS reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On FALSE reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On ELSE reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On COROCORO reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On AND reduce production FPlusFunExpr -> FPLUS AExpr AExpr 
-- On AAND reduce production FPlusFunExpr -> FPLUS AExpr AExpr 

State 24:
Expr -> RecAndInExpr . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE reduce production Expr -> RecAndInExpr 
-- On THEN reduce production Expr -> RecAndInExpr 
-- On SEMISEMI reduce production Expr -> RecAndInExpr 
-- On SEMI reduce production Expr -> RecAndInExpr 
-- On RPAREN reduce production Expr -> RecAndInExpr 
-- On PLUS reduce production Expr -> RecAndInExpr 
-- On OOR reduce production Expr -> RecAndInExpr 
-- On MULT reduce production Expr -> RecAndInExpr 
-- On MDLPAREN reduce production Expr -> RecAndInExpr 
-- On LT reduce production Expr -> RecAndInExpr 
-- On LPAREN reduce production Expr -> RecAndInExpr 
-- On LET reduce production Expr -> RecAndInExpr 
-- On INTV reduce production Expr -> RecAndInExpr 
-- On IN reduce production Expr -> RecAndInExpr 
-- On ID reduce production Expr -> RecAndInExpr 
-- On FPLUS reduce production Expr -> RecAndInExpr 
-- On FALSE reduce production Expr -> RecAndInExpr 
-- On ELSE reduce production Expr -> RecAndInExpr 
-- On COROCORO reduce production Expr -> RecAndInExpr 
-- On AND reduce production Expr -> RecAndInExpr 
-- On AAND reduce production Expr -> RecAndInExpr 

State 25:
LTExpr -> PExpr . LT PExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
LTExpr -> PExpr . [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
PExpr -> PExpr . PLUS MExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On PLUS shift to state 26
-- On LT shift to state 60
-- On TRUE reduce production LTExpr -> PExpr 
-- On THEN reduce production LTExpr -> PExpr 
-- On SEMISEMI reduce production LTExpr -> PExpr 
-- On SEMI reduce production LTExpr -> PExpr 
-- On RPAREN reduce production LTExpr -> PExpr 
-- On PLUS reduce production LTExpr -> PExpr 
-- On OOR reduce production LTExpr -> PExpr 
-- On MULT reduce production LTExpr -> PExpr 
-- On MDLPAREN reduce production LTExpr -> PExpr 
-- On LT reduce production LTExpr -> PExpr 
-- On LPAREN reduce production LTExpr -> PExpr 
-- On LET reduce production LTExpr -> PExpr 
-- On INTV reduce production LTExpr -> PExpr 
-- On IN reduce production LTExpr -> PExpr 
-- On ID reduce production LTExpr -> PExpr 
-- On FPLUS reduce production LTExpr -> PExpr 
-- On FALSE reduce production LTExpr -> PExpr 
-- On ELSE reduce production LTExpr -> PExpr 
-- On COROCORO reduce production LTExpr -> PExpr 
-- On AND reduce production LTExpr -> PExpr 
-- On AAND reduce production LTExpr -> PExpr 
** Conflict on PLUS LT

State 26:
PExpr -> PExpr PLUS . MExpr [ TRUE THEN SEMISEMI SEMI RPAREN PLUS OOR MULT MDLPAREN LT LPAREN LET INTV IN ID FPLUS FALSE ELSE COROCORO AND AAND ]
-- On TRUE shift to state 1
-- On MDRPAREN shift to state 2
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 12
-- On IF shift to state 13
-- On ID shift to state 14
-- On FUN shift to state 16
-- On FPLUS shift to state 19
-- On FALSE shift to state 21
-- On RecAndInExpr shift to state 24
-- On PExpr shift to state 25
-- On ORExpr shift to state 27
-- On MExpr shift to state 59
-- On ListExpr shift to state 31
-- On ListCoroExpr shift to state 32
-- On LetRecExpr shift to state 33
-- On LetInExpr shift to state 34
-- On LetAndInExpr shift to state 35
-- On LTExpr shift to state 36
-- On IfExpr shift to state 38
-- On FunMExpr shift to state 39
-- On FunExpr shift to state 40
-- On FPlusFunExpr shift to state 41
-- On Expr shift to state 54
-- On BExpr shift to state 47
-- On AppExpr shift to state 48
-- On ANDExpr shift to state 51
-- On AExpr shift to state 50
